PSP/borradores/ae/servlets/world-cup-teams/src/main/java/org/example/worldcupteams/common/errors/UnauthorizedOperationException.java
package org.example.worldcupteams.common.errors;

public class UnauthorizedOperationException extends RuntimeException {
    public UnauthorizedOperationException(String message) {
        super(message);
    }
}

